<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/superior"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="417dp"
        android:layout_height="700dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20px"
        android:paddingEnd="20px"
        tools:layout_editor_absoluteY="31dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="131dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:src="@drawable/usuario" />

        <TextView
            android:id="@+id/usuariotv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usu"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usu2"
            android:inputType="text"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/contraseñatv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contra"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contra2"
            android:inputType="textPassword"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/chk_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="CheckBox" />

            <CheckBox
                android:id="@+id/chk_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="CheckBox" />

            <CheckBox
                android:id="@+id/chk_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="CheckBox" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="369dp"
            android:layout_height="168dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_redondo_edit_text" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp">

                <RadioButton
                    android:id="@+id/btr_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DAM" />

                <RadioButton
                    android:id="@+id/btr_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DAW" />

                <RadioButton
                    android:id="@+id/btr_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ASIR" />
            </RadioGroup>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="Repetidor" />

        </LinearLayout>

        <Button
            android:id="@+id/boton"
            android:layout_width="368dp"
            android:layout_height="20dp"
            android:layout_weight="2"
            android:background="@color/btn"
            android:text="@string/boton"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>